class Address:
    def __init__(self, name, street, zip, city, street_number):
        self.name = name
        self.street = street
        self.zip = zip
        self.city = city
        self.street_number = street_number
