class Sale:
    def __init__(self, id, start_date, period):
        self.id = id
        self.start_date = start_date
        self.period = period
